<resources>
    <string name="app_name">The Name Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="database">Database</string>
    <string name="add">Add</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview1">TextView</string>
    <string name="peter_simonsen">Peter Simonsen</string>
    <string name="button">Button</string>
    <string name="textview2">TextView</string>
    <string name="add_person">Add person</string>
    <string name="write_name">Write name</string>
    <string name="existing">Existing image</string>
    <string name="image">Image</string>
    <string name="score">Score</string>
    <string name="enter_name">Enter name:</string>
</resources>