<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="116dp"
        android:gravity="center_horizontal"
        android:text="@string/quiz"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="148dp" />

    <Button
        android:id="@+id/buttonDatabase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/database"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toStartOf="@+id/buttonQuiz"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuiz" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/add"
        app:cornerRadius="6dp"
        app:layout_constraintStart_toStartOf="@+id/buttonDatabase"
        app:layout_constraintTop_toBottomOf="@+id/buttonDatabase" />
</androidx.constraintlayout.widget.ConstraintLayout>