<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activity.AddActivity">




    <EditText
        android:id="@+id/editTextName"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginVertical="60dp"
        android:text=""
        android:labelFor="@id/editTextName"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".activity.AddActivity">

        <Button
            android:id="@+id/imageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/design_default_color_primary"
            android:textColor="#ffffff"
            android:text="@string/existing"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/add" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:text="@string/add_person" />


</LinearLayout>